# methods-graph

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/source/: api_index.rst  conf.py  index.rst
methods_graph/: __init__.py  download_example_data.py  get_graph_from_paper.py  query_gemini.py
